# CodePP

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  project.ps1  test.h5
build_release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakePresets.json  FindHDF5.cmake  HDF5-Target-release.cmake  HDF5-release-x86_64-data.cmake  HDF5Config.cmake  ZLIB-release-x86_64-data.cmake  build.ninja  cmake_install.cmake  compile_commands.json  conan_toolchain.cmake  conanbuildenv-release-x86_64.bat  module-HDF5-release-x86_64-data.cmake
build_release/src/codepp/: cmake_install.cmake
cmake/: compiler.cmake
include/: prelude.hpp
include/codepp/core/operations/: math.hpp  spikes_detection.hpp
include/codepp/core/types/: electrode.hpp  mea.hpp  recording.hpp  signal.hpp
include/codepp/csv/: csv.hpp
include/codepp/hdf5/: h5analog.hpp  h5export.hpp  h5import.hpp  h5utils.hpp  type_inspector.hpp
include/codepp/meas/: mea60.hpp
pycode/: CMakeLists.txt  pycode.cpp  pycodeConfig.hpp.in
src/: main.cpp
src/codepp/: CMakeLists.txt
src/codepp/core/operations/: math.cpp  spikes_detection.cpp
src/codepp/core/types/: mea.cpp  recording.cpp  signal.cpp
src/codepp/csv/: csv.cpp
src/codepp/hdf5/: h5analog.cpp  h5export.cpp  h5import.cpp  type_inspector.cpp
src/codepp/meas/: mea60.cpp
